# kabipay-svc

./: .env.example  .gitignore  Cargo.toml  README.md  scaffold-services.ps1
.cargo/: config.toml
crates/kabipay-analytics/: Cargo.toml
crates/kabipay-analytics/src/: main.rs
crates/kabipay-analytics/src/entities/: mod.rs
crates/kabipay-analytics/src/resolvers/: mod.rs  mutation.rs  query.rs  types.rs
crates/kabipay-analytics/src/services/: analytics_service.rs
crates/kabipay-assets/: Cargo.toml
crates/kabipay-assets/src/: main.rs
crates/kabipay-assets/src/entities/: mod.rs
crates/kabipay-assets/src/resolvers/: query.rs  types.rs
crates/kabipay-assets/src/services/: asset_service.rs  mod.rs
crates/kabipay-attendance/: Cargo.toml
crates/kabipay-attendance/src/: main.rs
crates/kabipay-attendance/src/entities/: mod.rs
crates/kabipay-attendance/src/resolvers/: mod.rs  mutation.rs  query.rs  timesheet_assignment_auth.rs  types.rs
crates/kabipay-attendance/src/services/: attendance_service.rs  hrms_master_service.rs  mod.rs  punch_policy.rs  timesheet_batch_service.rs  timesheet_dates.rs  timesheet_policy.rs  timesheet_project_assignment_service.rs
crates/kabipay-auth/: Cargo.toml
crates/kabipay-auth/src/: handlers.rs  jwt.rs  main.rs  password.rs  rbac.rs  state.rs  tokens.rs
crates/kabipay-auth/src/entities/: mod.rs
crates/kabipay-benefits/: Cargo.toml
crates/kabipay-benefits/src/: main.rs
crates/kabipay-benefits/src/entities/: mod.rs
crates/kabipay-benefits/src/resolvers/: mutation.rs  query.rs  types.rs
crates/kabipay-benefits/src/services/: benefits_service.rs  mod.rs
crates/kabipay-billing/: Cargo.toml
crates/kabipay-billing/src/: main.rs
crates/kabipay-billing/src/resolvers/: query.rs  types.rs
crates/kabipay-billing/src/services/: billing_service.rs  mod.rs
crates/kabipay-common/: Cargo.toml
crates/kabipay-common/src/: client_data_scope.rs  context.rs  db.rs  env_file.rs  error.rs  file_download_token.rs  ids.rs  jwt.rs  lib.rs  middleware.rs  pagination.rs  password.rs  subgraph.rs  telemetry.rs  tenant_seed.rs  workflow_approval.rs  workflow_current_step.rs  workflow_inbox.rs
crates/kabipay-compensation/: Cargo.toml
crates/kabipay-compensation/src/: main.rs
crates/kabipay-compensation/src/entities/: mod.rs
crates/kabipay-compensation/src/resolvers/: query.rs  types.rs
crates/kabipay-compensation/src/services/: compensation_service.rs  mod.rs
crates/kabipay-db-entities/: Cargo.toml
crates/kabipay-db-entities/src/: lib.rs
crates/kabipay-db-entities/src/ops/: billing_cycle.rs  feature_flag.rs  integration_connector.rs  invoice.rs  mod.rs  module.rs  operator_role.rs  operator_session.rs  operator_user.rs  operator_user_role.rs  payment.rs  tenant.rs  tenant_database.rs  tenant_subscription.rs
crates/kabipay-db-entities/src/tenant/: d0005_auth_rbac.rs  d0006_org_hierarchy.rs  d0007_employee_core.rs  d0008_document_system.rs  d0009_custom_fields.rs  d0010_time_shift_roster.rs  d0011_leave.rs  d0012_payroll.rs  d0013_tax_statutory.rs  d0014_benefits.rs  d0015_expense.rs  d0016_recruitment.rs  d0017_onboarding_offboarding.rs  d0018_performance.rs  d0019_lms.rs  d0020_succession.rs  d0021_compensation.rs  d0022_assets.rs  d0023_grievance.rs  d0024_analytics.rs  d0025_workflow.rs  d0026_integrations.rs  d0027_communication_audit.rs  d0028_master_data.rs  d0029_file_storage.rs  d0030_outbox_events.rs  d0031_tax_proof.rs  d0032_attendance_punch_policy.rs  d0033_travel_request.rs  d0035_payroll_arrear.rs  d0046_user_notification_preference.rs  mod.rs  prelude.rs
crates/kabipay-employee/: Cargo.toml
crates/kabipay-employee/src/: main.rs
crates/kabipay-employee/src/entities/: mod.rs
crates/kabipay-employee/src/resolvers/: mod.rs  mutation.rs  query.rs  scope.rs  types.rs
crates/kabipay-employee/src/services/: document_file_service.rs  document_service.rs  employee_service.rs  employment_history_service.rs  file_token.rs  mod.rs  offboarding_fnf_service.rs  onboarding_service.rs  org_service.rs  profile_extras_service.rs  rbac_admin_service.rs  separation_service.rs
crates/kabipay-employee/src/services/object_store/: config.rs  mod.rs  s3_tenant.rs
crates/kabipay-expense/: Cargo.toml
crates/kabipay-expense/src/: main.rs
crates/kabipay-expense/src/entities/: mod.rs
crates/kabipay-expense/src/resolvers/: mutation.rs  query.rs  (+1 more)
crates/kabipay-grievance/: Cargo.toml
crates/kabipay-grievance/src/: main.rs
crates/kabipay-leave/: Cargo.toml
crates/kabipay-leave/src/: main.rs
crates/kabipay-lms/: Cargo.toml
crates/kabipay-lms/src/: main.rs
crates/kabipay-notification/: Cargo.toml
crates/kabipay-notification/src/: main.rs
crates/kabipay-notification/src/resolvers/: mutation.rs  query.rs  types.rs
crates/kabipay-notification/src/services/: announcement_storage.rs  mod.rs  notification_preference.rs  notification_service.rs
crates/kabipay-notification/src/services/object_store/: config.rs  mod.rs  s3_tenant.rs
crates/kabipay-operator/: Cargo.toml
crates/kabipay-operator/src/: main.rs
crates/kabipay-ops/: Cargo.toml
crates/kabipay-ops/src/: main.rs
crates/kabipay-outbox-worker/: Cargo.toml
crates/kabipay-outbox-worker/src/: main.rs
crates/kabipay-payroll/: Cargo.toml
crates/kabipay-payroll/src/: main.rs
crates/kabipay-performance/: Cargo.toml
crates/kabipay-performance/src/: main.rs
crates/kabipay-recruitment/: Cargo.toml
crates/kabipay-recruitment/src/: main.rs
crates/kabipay-succession/: Cargo.toml
crates/kabipay-succession/src/: main.rs
crates/kabipay-succession/src/entities/: mod.rs
crates/kabipay-succession/src/resolvers/: query.rs  types.rs
crates/kabipay-succession/src/services/: mod.rs  succession_service.rs
crates/kabipay-tax/: Cargo.toml
crates/kabipay-tax/src/: main.rs
crates/kabipay-tenant/: Cargo.toml
crates/kabipay-tenant/src/: main.rs
crates/kabipay-workflow/: Cargo.toml
crates/kabipay-workflow/src/: main.rs
scripts/: generate_db_entities.py  provision-tenant.ps1  seed-demo-data.ps1  start-subgraphs.ps1  update-tenant-liquibase.ps1
(+70 files in other folders)
