[package]
name = "kabipay-auth"
version = "0.1.0"
default-run = "kabipay-auth"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kabipay-auth"
path = "src/main.rs"

[[bin]]
name = "kabipay-auth-hash"
path = "src/bin/hash_password.rs"

[dependencies]
kabipay-common.workspace = true
kabipay-db-entities.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
validator.workspace = true
