[package]
name = "kabipay-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
dashmap.workspace = true
dotenvy.workspace = true
kabipay-db-entities.workspace = true
sha1.workspace = true
