[package]
name = "kabipay-employee"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kabipay-employee"
path = "src/main.rs"

[dependencies]
kabipay-common.workspace = true
kabipay-db-entities.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
urlencoding.workspace = true