[package]
name = "kabipay-notification"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kabipay-notification"
path = "src/main.rs"

[dependencies]
kabipay-common.workspace = true
kabipay-db-entities.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["fs"] }
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
base64.workspace = true
opendal = { version = "0.55.0", features = ["services-s3"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
reqsign = { version = "0.16.5", default-features = false, features = ["reqwest_request", "services-aws", "rustls"] }