[package]
name = "kabipay-outbox-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kabipay-outbox-worker"
path = "src/main.rs"

[dependencies]
kabipay-common.workspace = true
kabipay-db-entities.workspace = true
tokio.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
